--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "vue-carousel": "^0.18.0",
     "vue-router": "^3.1.3",
     "vue-slider-component": "^3.1.0",
+    "vue-stepper": "^1.4.2",
     "vueperslides": "^2.2.0"
   },
   "devDependencies": {
