--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^3.1.3",
     "vue-slider-component": "^3.1.0",
     "vue-stepper": "^1.4.2",
+    "vuejs-stepper": "^0.2.2",
     "vueperslides": "^2.2.0"
   },
   "devDependencies": {
