--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "vue-agile": "^1.0.11",
     "vue-axios": "^2.1.5",
     "vue-carousel": "^0.18.0",
+    "vue-good-table": "^2.18.1",
     "vue-router": "^3.1.3",
     "vue-slider-component": "^3.1.0",
     "vue-stepper": "^1.4.2",
