--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "vue-axios": "^2.1.5",
     "vue-carousel": "^0.18.0",
     "vue-good-table": "^2.18.1",
+    "vue-google-charts": "^0.3.2",
     "vue-router": "^3.1.3",
     "vue-slider-component": "^3.1.0",
     "vue-stepper": "^1.4.2",
