--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-carousel": "^1.0.2",
+    "@firebase/firestore": "^1.10.0",
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
@@ -21,6 +22,7 @@
     "vue-agile": "^1.0.11",
     "vue-axios": "^2.1.5",
     "vue-carousel": "^0.18.0",
+    "vue-firestore": "^0.3.30",
     "vue-good-table": "^2.18.1",
     "vue-google-charts": "^0.3.2",
     "vue-router": "^3.1.3",
