--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "google-maps-api-loader": "^1.1.1",
     "hooper": "^0.3.4",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "require-context": "^1.1.0",
     "vue": "^2.6.11",
     "vue-agile": "^1.0.11",
@@ -26,11 +27,13 @@
     "vue-firestore": "^0.3.30",
     "vue-good-table": "^2.18.1",
     "vue-google-charts": "^0.3.2",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.1.3",
     "vue-slider-component": "^3.1.0",
     "vue-stepper": "^1.4.2",
     "vuejs-stepper": "^0.2.2",
-    "vueperslides": "^2.2.0"
+    "vueperslides": "^2.2.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
