--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.3",
+    "d3": "^5.15.0",
     "emailjs-com": "^2.4.1",
     "google-maps-api-loader": "^1.1.1",
     "hooper": "^0.3.4",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
+    "linechart": "^2.0.0",
     "require-context": "^1.1.0",
     "vue": "^2.6.11",
     "vue-agile": "^1.0.11",
